# DevOps-Agent

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deployment.yaml  docker-compose.yaml  tasks.json
.github/workflows/: check.yml  main_ci.yaml
actor_based_chat/: README.md
actor_based_chat/backend/: Cargo.toml
actor_based_chat/backend/.github/workflows/: check.yml
actor_based_chat/backend/src/: lib.rs  main.rs
agent_core/: .gitignore  Cargo.toml  set_of_tasks.json
agent_core/src/: lib.rs  logging.rs  main.rs  plan_generating.rs  task_execution.rs  task_receiving.rs
agent_main/: Cargo.toml
agent_main/src/: cli.rs  logging.rs  main.rs  mcp.rs
agent_plan/: Cargo.toml
agent_plan/src/: deployment_processing.rs  lib.rs  llm_plan_integration.rs  rollback_handling.rs  secure_task_execution.rs  task_pipeline_execution.rs  task_types_and_workflow_steps.rs
agent_tests/: Cargo.toml
agent_tests/src/: lib.rs
crates/agent_core/: Cargo.toml
crates/agent_core/src/: agent_structs.rs  lib.rs  wrappers.rs
crates/agent_runner/: Cargo.toml
crates/agent_runner/src/: main.rs
crates/agent_runner/src/utils/: agent.rs  cli.rs  get_env.rs  logging.rs  mod.rs  wrappers.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  ollama.rs  openai.rs
crates/memory_store/: Cargo.toml
crates/memory_store/src/: lib.rs
crates/tool_executor/: Cargo.toml
crates/tool_executor/src/: lib.rs  process_execution.rs
crates/tool_executor/src/github_interaction/: github_api_client.rs  github_structs.rs  mod.rs
devops_agent_src/agent_main/src/: cli.rs  logging.rs
devops_agent_src/agent_plan/: Cargo.toml
devops_agent_src/agent_plan/src/: deployment_processing.rs  llm_plan_integration.rs  secure_task_execution.rs  task_pipeline_execution.rs  task_types_and_workflow_steps.rs
devops_agent_src/agent_tests/: Cargo.toml
devops_agent_src/agent_tests/src/: lib.rs
docs/: Examples.md  Installation.md  Setup.md
tests/: Cargo.toml
tests/src/: lib.rs
