[workspace]
resolver = "3"
members = [ 
    "agent_main",
    "agent_plan"
, "agent_tests"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
rmcp = { version = "0.4.0", features = ["transport-io"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3" }
reqwest = { version = "0.12.22", features = ["json"] }
clap = { version = "4.5.42", features = ["derive"] }
