[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"

[workspace.lints.clippy]
all = "warn"

[workspace]
resolver = "2"
members = [
    # shared trats and utility functions
    "crates/agent_core",
    # runner
    "crates/agent_runner", 
    # llm integration
    "crates/llm",
    # in-memory and persistent memory structures
    "crates/memory_store",
    # safe wrappers for invoking shell commands or APIs
    "crates/tool_executor",
    # tests
    "tests"
]
