[package]
name = "agent_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"]}
serde_json ={ version = "1.0.139" }
rmcp = { version = "0.3.2", features = ["transport-io"] }
tracing = { version = "0.1.41" }
clap = { version = "4.5.42", features = ["derive"] }
tracing-subscriber = { version = "0.3" }
reqwest ={ version = "0.12.22", features = ["json"]}