[package]
name = "agent_main"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_plan = { path = "../agent_plan" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }