[package]
name = "tool_executor"
version = "0.1.0"
edition = "2024"

[dependencies]
# async
tokio = { version = "1.47.1", features = ["full"] }
# cli
crossterm = "0.29.0"
# http
reqwest = { version = "0.12.24", features = ["json"] }
# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# zip file processing
zip = "6.0.0"