[package]
name = "agent_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_plan = { path = "../agent_plan" }

tokio = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
tracing-test = { workspace = true }
tokio-util ={ workspace = true }
tracing ={ workspace = true }